k8s-conf/dotnetcore-k8s-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: coremvc
  namespace: do-myproject
  labels:
    run: coremvc
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    run: coremvc
  type: ClusterIP
---
kind: Service
apiVersion: v1
metadata:
  name: corewebapi
  namespace: do-myproject
  labels:
    run: corewebapi
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    run: corewebapi
  type: ClusterIP
