k8s-conf/dotnetcore-k8s-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: coremvc-ingress
  namespace: do-myproject
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
#  backend:
#    serviceName: default-http-backend
#    servicePort: 80
  rules:
  - host: coremvc.geek.per.sg
    http:
      paths:
      - path: /
        backend:
          serviceName: coremvc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: corewebapi-ingress
  namespace: do-myproject
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
#  backend:
#    serviceName: default-http-backend
#    servicePort: 80
  rules:
  - host: corewebapi.geek.per.sg
    http:
      paths:
      - path: /api/keyvalue/
        backend:
          serviceName: corewebapi
          servicePort: 80
